modified:   AndroidManifest.xml 	modified:   bin/AndroidManifest.xml 	modified:   bin/FilePlore.apk 	modified:   bin/classes.dex 	modified:   bin/classes/com/changhong/fileplore/activities/ClassifyListActivity$1.class 	modified:   bin/classes/com/changhong/fileplore/activities/ClassifyListActivity$2.class 	modified:   bin/classes/com/changhong/fileplore/activities/ClassifyListActivity$MyHandler.class 	modified:   bin/classes/com/changhong/fileplore/activities/ClassifyListActivity.class 	modified:   bin/classes/com/changhong/fileplore/activities/MainActivity.class 	modified:   bin/classes/com/changhong/fileplore/activities/NetActivity$1.class 	modified:   bin/classes/com/changhong/fileplore/activities/NetActivity.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$1.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$2.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$3.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$FileListAdapter$1.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$FileListAdapter$ViewHolder.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$FileListAdapter.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity$myItemListener.class 	modified:   bin/classes/com/changhong/fileplore/activities/PloreActivity.class 	modified:   bin/classes/com/changhong/fileplore/activities/SambaActivity$FileListAdapter.class 	modified:   bin/classes/com/changhong/fileplore/activities/SambaActivity.class 	modified:   bin/classes/com/changhong/fileplore/adapter/GridAdapter.class 	modified:   bin/classes/com/changhong/fileplore/adapter/ListAdapter.class
	modified:   bin/classes/com/changhong/fileplore/adapter/PhotoGirdAdapter.class
	modified:   bin/classes/com/example/fileplore/R$drawable.class
	modified:   bin/classes/com/example/fileplore/R$id.class
	modified:   bin/class

--- a/res/layout/activity_plore.xml
+++ b/res/layout/activity_plore.xml
@@ -94,7 +94,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="复制" />
+            android:text="剪切" />
 
         <Button
             android:id="@+id/plore_btn_3"
@@ -105,12 +105,12 @@
             android:text="粘贴" />
 
         <Button
-            android:id="@+id/plore_btn_4"
+            android:id="@+id/plore_btn_more"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="删除" />
+            android:text="更多" />
     </LinearLayout>
 
 </RelativeLayout>
