--- a/res/layout/activity_plore.xml
+++ b/res/layout/activity_plore.xml
@@ -61,7 +61,7 @@
         android:paddingEnd="5dp"
         android:paddingStart="5dp" >
 
-        <ListView
+        <com.changhong.fileplore.widget.RefreshListView
             android:id="@+id/file_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
