--- a/res/values-w360dp/colors.xml
+++ b/res/values-w360dp/colors.xml
@@ -6,4 +6,5 @@
     <color name="white">#ffffff</color>
     <color name="green">#00aa00</color>
    <color name="black">#000000</color>
+    <color name="gold">#b89766</color>
 </resources>
