--- a/res/layout/listitem_netdev.xml
+++ b/res/layout/listitem_netdev.xml
@@ -28,6 +28,7 @@
 
     <TextView
         android:id="@+id/tv_net_devurl"
+        android:layout_below="@+id/tv_net_devname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
