--- a/res/layout/head.xml
+++ b/res/layout/head.xml
@@ -13,6 +13,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="10dp"
+        android:layout_marginBottom="10dp"
+         android:layout_marginTop="10dp"
         android:paddingTop="10dp" >
 
         <!-- 箭头图像、进度条 -->
@@ -38,8 +40,8 @@
             <ProgressBar
                 android:id="@+id/head_progressBar"
                 style="?android:attr/progressBarStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_gravity="center"
                 android:visibility="gone" />
         </FrameLayout>
@@ -74,12 +76,7 @@
                 android:textSize="10sp" />
         </LinearLayout>
 
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="1px"
-            android:layout_alignParentBottom="true"
-            android:background="@color/white" >
-        </View>
+ 
     </RelativeLayout>
 
 </LinearLayout>
