--- a/res/values-w360dp/dimens.xml
+++ b/res/values-w360dp/dimens.xml
@@ -7,14 +7,21 @@
     <dimen name="griditem_img">110dp</dimen>
     <dimen name="browse_txtcapacity_size">10sp</dimen>
     <dimen name="top_textsize">20sp</dimen>
-    <dimen name="slidingmenu_offset">190dp</dimen>
+    <dimen name="slidingmenu_offset">180dp</dimen>
     <dimen name="list_padding">10dp</dimen>
     <dimen name="shadow_width">15dp</dimen>
-    <dimen name="menu_text_size">16dp</dimen>
+    <dimen name="menu_text_size">17dp</dimen>
     <dimen name="menu_img_size_margintop">10dp</dimen>
     <dimen name="menu_img_size_marginstart">10dp</dimen>
-    <dimen name="menu_img_size">35dp</dimen>
+    <dimen name="menu_img_size">45dp</dimen>
+    <dimen name="default_circle_view_size">80dp</dimen>
 
     <integer name="num_cols">1</integer>
+
+    <declare-styleable name="CircleProgress">
+        <attr name="color1" format="reference|color" />
+        <attr name="color2" format="reference|color" />
+        <attr name="color3" format="reference|color" />
+    </declare-styleable>
 
 </resources>
