--- a/res/layout/head.xml
+++ b/res/layout/head.xml
@@ -62,7 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="下拉可以刷新"
-                android:textColor="@color/white"
+                android:textColor="@color/gold"
                 android:textSize="20sp" />
 
             <!-- 最近更新 -->
