--- a/res/layout/media_player.xml
+++ b/res/layout/media_player.xml
@@ -2,10 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl_mediaplayer"
     android:layout_width="wrap_content"
-    android:layout_height="40dp" >
+    android:layout_height="38dp" 
+    android:paddingTop="10dp">
 
     <ImageButton
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="10dp"
         android:id="@+id/media_play"
         android:layout_width="@dimen/media_button_size"
         android:layout_height="@dimen/media_button_size"
@@ -13,8 +14,9 @@
         android:background="@drawable/start" />
 
     <TextView
+        
         android:id="@+id/tv_curtime"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_toEndOf="@+id/media_play"
