--- a/res/layout/listitem_plore.xml
+++ b/res/layout/listitem_plore.xml
@@ -38,9 +38,11 @@
 
     <TextView
         android:id="@+id/lasttime"
+         android:layout_toEndOf="@+id/filename"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="5dp"
         android:layout_marginEnd="2dp"
         android:paddingTop="3dp"
         android:textSize="12sp" />
