--- a/res/layout/listitem_downlist.xml
+++ b/res/layout/listitem_downlist.xml
@@ -3,48 +3,49 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/corners_bg"
-    android:orientation="horizontal"
     android:paddingBottom="0dp"
     android:paddingTop="0dp" >
 
-    <CheckBox
-        android:id="@+id/cb"
-        android:layout_marginStart="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:checked="false"   
-        android:visibility="gone" >
-    </CheckBox>
-
-    <ImageView
-        android:layout_toEndOf="@+id/cb"
-        android:id="@+id/fileimg"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="5dp"
-        android:contentDescription="@string/img_description" />
-
     <TextView
-        android:id="@+id/filename"
+        android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_toEndOf="@+id/fileimg"
-        android:ellipsize="end"
-        android:ems="9"
+        android:ems="6"
         android:maxLines="2"
-        android:paddingTop="3dp"
-        android:textSize="16sp" />
+        android:text="name"
+        android:textSize="14sp" />
+
+    <ProgressBar
+        android:id="@+id/download_bar"
+        style="@style/tallerBarStyle"
+        android:layout_width="145dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="7dp"
+        android:layout_toEndOf="@+id/tv_name"
+        android:max="1000" />
 
     <TextView
-        android:id="@+id/lasttime"
-         android:layout_toEndOf="@+id/filename"
+        android:id="@+id/tv_process"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_alignBaseline="@+id/tv_name"
         android:layout_marginStart="5dp"
-        android:layout_marginEnd="2dp"
-        android:paddingTop="3dp"
-        android:textSize="12sp" />
+        android:layout_toEndOf="@+id/download_bar"
+        android:layout_toStartOf="@+id/btn_download"
+        android:text="0%"
+        android:textSize="13sp" />
+
+    <Button
+        android:id="@+id/btn_download"
+        android:layout_width="50dp"
+        android:layout_height="35dp"
+        android:layout_alignBaseline="@+id/tv_name"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="3dp"
+        android:paddingTop="2dp"
+        android:text="取消"
+        android:textSize="13sp" />
 
 </RelativeLayout>
