--- a/res/menu/plore.xml
+++ b/res/menu/plore.xml
@@ -17,4 +17,9 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/sambafile"/>
+<item
+        android:id="@+id/action_scanner"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/scanner"/>
 </menu>
