--- a/res/layout/dialog_filepreview.xml
+++ b/res/layout/dialog_filepreview.xml
@@ -3,84 +3,83 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" >
 
-    <TableRow
-        android:paddingStart="2dp"
-        android:paddingTop="2dp">
+    <TableRow android:padding="2dp" >
 
         <ImageView
-            android:contentDescription="@string/img_description"
             android:id="@+id/iv_filepreview_1"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_width="@dimen/filepreview_img_size"
+            android:layout_height="@dimen/filepreview_img_size"
+            android:contentDescription="@string/img_description" />
 
         <TextView
-            android:paddingTop="5dp"
             android:id="@+id/tv_filepreview_1"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            
             android:maxLines="2"
+            android:paddingStart="2dp"
+             android:paddingEnd="2dp"
+            android:paddingTop="5dp"
             android:textSize="12sp" />
     </TableRow>
 
-    <TableRow
-        android:paddingStart="2dp"
-        android:paddingTop="2dp">
-          <ImageView
-                 android:contentDescription="@string/img_description"
+    <TableRow android:padding="2dp" >
+
+        <ImageView
             android:id="@+id/iv_filepreview_2"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_width="@dimen/filepreview_img_size"
+            android:layout_height="@dimen/filepreview_img_size"
+            android:contentDescription="@string/img_description" />
 
         <TextView
-            android:paddingTop="5dp"
             android:id="@+id/tv_filepreview_2"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            
             android:maxLines="2"
+              android:paddingEnd="2dp"
+            android:paddingStart="2dp"
+            android:paddingTop="5dp"
             android:textSize="12sp" />
     </TableRow>
 
-    <TableRow
-        android:paddingStart="2dp"
-        android:paddingTop="2dp">
-          <ImageView
-                 android:contentDescription="@string/img_description"
+    <TableRow android:padding="2dp" >
+
+        <ImageView
             android:id="@+id/iv_filepreview_3"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_width="@dimen/filepreview_img_size"
+            android:layout_height="@dimen/filepreview_img_size"
+            android:contentDescription="@string/img_description" />
 
         <TextView
-            android:paddingTop="5dp"
             android:id="@+id/tv_filepreview_3"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            
             android:maxLines="2"
+              android:paddingEnd="2dp"
+            android:paddingStart="2dp"
+            android:paddingTop="5dp"
             android:textSize="12sp" />
     </TableRow>
 
-    <TableRow
-        android:paddingStart="2dp"
-        android:paddingTop="2dp">
-          <ImageView
-                 android:contentDescription="@string/img_description"
+    <TableRow android:padding="2dp" >
+
+        <ImageView
             android:id="@+id/iv_filepreview_4"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_width="@dimen/filepreview_img_size"
+            android:layout_height="@dimen/filepreview_img_size"
+            android:contentDescription="@string/img_description" />
 
         <TextView
-            android:paddingTop="5dp"
             android:id="@+id/tv_filepreview_4"
             android:layout_width="170dp"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-           
             android:maxLines="2"
+              android:paddingEnd="2dp"
+            android:paddingStart="2dp"
+            android:paddingTop="5dp"
             android:textSize="12sp" />
     </TableRow>
 
