--- a/res/layout/activity_browse.xml
+++ b/res/layout/activity_browse.xml
@@ -179,6 +179,90 @@
                 </TextView>
             </RelativeLayout>
         </TableRow>
+        
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" >
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" >
+
+                <ImageView
+                    android:id="@+id/img_wechat"
+                    android:layout_width="@dimen/browse_pic_width"
+                    android:layout_height="@dimen/browse_pic_width"
+                    android:layout_centerHorizontal="true"
+                    android:clickable="true"
+                    android:contentDescription="@string/music"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_music_selector" >
+                </ImageView>
+
+                <TextView
+                    android:id="@+id/tv_wechat"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/img_wechat"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/wechat_vedio" >
+                </TextView>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" >
+
+                <ImageView
+                    android:id="@+id/img_qq"
+                    android:layout_width="@dimen/browse_pic_width"
+                    android:layout_height="@dimen/browse_pic_width"
+                    android:layout_centerHorizontal="true"
+                    android:clickable="true"
+                    android:contentDescription="@string/zip"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_zip_selector" >
+                </ImageView>
+
+                <TextView
+                    android:id="@+id/tv_qq"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/img_qq"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/qq_file" >
+                </TextView>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" >
+
+                <ImageView
+                    android:id="@+id/img_app"
+                    android:layout_width="@dimen/browse_pic_width"
+                    android:layout_height="@dimen/browse_pic_width"
+                    android:layout_centerHorizontal="true"
+                    android:clickable="true"
+                    android:contentDescription="@string/apk"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/icon_apk_selector" >
+                </ImageView>
+
+                <TextView
+                    android:id="@+id/tv_app"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/img_app"
+                    android:layout_centerHorizontal="true"
+                    android:text="@string/app" >
+                </TextView>
+            </RelativeLayout>
+        </TableRow>
     </TableLayout>
 
     <TableLayout
