--- a/res/layout/listitem_netdev.xml
+++ b/res/layout/listitem_netdev.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/corners_bg"
+    android:background="@drawable/corners_selector"
     android:orientation="horizontal"
     android:paddingBottom="0dp"
     android:paddingTop="0dp" >
