--- a/res/values-w360dp/dimens.xml
+++ b/res/values-w360dp/dimens.xml
@@ -21,7 +21,7 @@
     <dimen name="media_button_size">30dp</dimen>
     <dimen name="default_circle_view_size">80dp</dimen>
     <dimen name="filepreview_img_size">40dp</dimen>
-
+ <dimen name="textsize_option">17sp</dimen>
     <integer name="num_cols">1</integer>
 
     <declare-styleable name="CircleProgress">
