--- a/res/layout/activity_browse.xml
+++ b/res/layout/activity_browse.xml
@@ -9,15 +9,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="@drawable/corners_bg"
+        android:background="@drawable/corners_tablebg"
         android:paddingBottom="10dp"
-        android:paddingTop="10dp" >
+        android:paddingTop="5dp" >
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+           >"
 
             <RelativeLayout
+                 android:paddingTop="10dp"
+                android:layout_margin="1dp"
+                android:background="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" >
@@ -44,6 +48,9 @@
             </RelativeLayout>
 
             <RelativeLayout
+                 android:paddingTop="10dp"
+                android:layout_margin="1dp"
+                 android:background="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" >
@@ -70,6 +77,9 @@
             </RelativeLayout>
 
             <RelativeLayout
+                 android:paddingTop="10dp"
+                android:layout_margin="1dp"
+                 android:background="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" >
@@ -99,9 +109,12 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp" >
+           >
 
-            <RelativeLayout
+            <RelativeLayout 
+                android:paddingTop="10dp"
+                android:layout_margin="1dp"
+                android:background="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" >
@@ -128,6 +141,9 @@
             </RelativeLayout>
 
             <RelativeLayout
+                 android:paddingTop="10dp"
+                android:layout_margin="1dp"
+                 android:background="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" >
@@ -154,6 +170,9 @@
             </RelativeLayout>
 
             <RelativeLayout
+                 android:paddingTop="10dp"
+                android:layout_margin="1dp"
+                 android:background="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" >
@@ -179,13 +198,16 @@
                 </TextView>
             </RelativeLayout>
         </TableRow>
-        
+      
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp" >
+            >
 
             <RelativeLayout
+                 android:paddingTop="10dp"
+                   android:background="@color/white"
+                android:layout_margin="1dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" >
@@ -212,6 +234,9 @@
             </RelativeLayout>
 
             <RelativeLayout
+                 android:paddingTop="10dp"
+                  android:background="@color/white"
+                android:layout_margin="1dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" >
@@ -238,6 +263,9 @@
             </RelativeLayout>
 
             <RelativeLayout
+                 android:paddingTop="10dp"
+                  android:background="@color/white"
+                android:layout_margin="1dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1" >
