--- a/res/drawable/corners_selector.xml
+++ b/res/drawable/corners_selector.xml
@@ -3,7 +3,7 @@
 
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/main_background" />
+            <solid android:color="@color/main_background_" />
 
             <corners android:radius="10dp"  />
         </shape>
