--- a/res/layout/activity_browse.xml
+++ b/res/layout/activity_browse.xml
@@ -15,16 +15,16 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-           >"
+            android:layout_height="wrap_content" >
+"
 
             <RelativeLayout
-                 android:paddingTop="10dp"
-                android:layout_margin="1dp"
-                android:background="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:paddingTop="10dp" >
 
                 <ImageView
                     android:id="@+id/img_movie"
@@ -48,12 +48,12 @@
             </RelativeLayout>
 
             <RelativeLayout
-                 android:paddingTop="10dp"
-                android:layout_margin="1dp"
-                 android:background="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:paddingTop="10dp" >
 
                 <ImageView
                     android:id="@+id/img_photo"
@@ -77,12 +77,12 @@
             </RelativeLayout>
 
             <RelativeLayout
-                 android:paddingTop="10dp"
-                android:layout_margin="1dp"
-                 android:background="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:paddingTop="10dp" >
 
                 <ImageView
                     android:id="@+id/img_txt"
@@ -108,16 +108,15 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-           >
+            android:layout_height="wrap_content" >
 
-            <RelativeLayout 
-                android:paddingTop="10dp"
-                android:layout_margin="1dp"
-                android:background="@color/white"
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:paddingTop="10dp" >
 
                 <ImageView
                     android:id="@+id/img_music"
@@ -141,12 +140,12 @@
             </RelativeLayout>
 
             <RelativeLayout
-                 android:paddingTop="10dp"
-                android:layout_margin="1dp"
-                 android:background="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:paddingTop="10dp" >
 
                 <ImageView
                     android:id="@+id/img_zip"
@@ -170,12 +169,12 @@
             </RelativeLayout>
 
             <RelativeLayout
-                 android:paddingTop="10dp"
-                android:layout_margin="1dp"
-                 android:background="@color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:paddingTop="10dp" >
 
                 <ImageView
                     android:id="@+id/img_apk"
@@ -198,19 +197,18 @@
                 </TextView>
             </RelativeLayout>
         </TableRow>
-      
+
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content" >
 
             <RelativeLayout
-                 android:paddingTop="10dp"
-                   android:background="@color/white"
-                android:layout_margin="1dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:paddingTop="10dp" >
 
                 <ImageView
                     android:id="@+id/img_wechat"
@@ -234,12 +232,12 @@
             </RelativeLayout>
 
             <RelativeLayout
-                 android:paddingTop="10dp"
-                  android:background="@color/white"
-                android:layout_margin="1dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:paddingTop="10dp" >
 
                 <ImageView
                     android:id="@+id/img_qq"
@@ -263,12 +261,12 @@
             </RelativeLayout>
 
             <RelativeLayout
-                 android:paddingTop="10dp"
-                  android:background="@color/white"
-                android:layout_margin="1dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" >
+                android:layout_margin="1dp"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:paddingTop="10dp" >
 
                 <ImageView
                     android:id="@+id/img_app"
@@ -322,6 +320,7 @@
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginStart="5dp"
                 android:max="100"
                 android:progress="50" />
 
@@ -385,6 +384,7 @@
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginStart="5dp"
                 android:max="100"
                 android:progress="50" />
 
