--- a/res/layout/activity_plore.xml
+++ b/res/layout/activity_plore.xml
@@ -79,6 +79,7 @@
         android:layout_height="40dp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal"
+        android:background="@color/btnblack"
         android:visibility="gone" >
 
         <Button
@@ -87,6 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColor="@color/main_background"
             android:text="新建" />
 
         <Button
@@ -95,6 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+             android:textColor="@color/main_background"
             android:text="剪切" />
 
         <Button
@@ -103,6 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+             android:textColor="@color/main_background"
             android:text="粘贴" />
 
         <Button
@@ -111,6 +115,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+             android:textColor="@color/main_background"
             android:text="更多" />
     </LinearLayout>
 
