--- a/res/values-w360dp/dimens.xml
+++ b/res/values-w360dp/dimens.xml
@@ -7,8 +7,9 @@
     <dimen name="browse_pic_width">60dp</dimen>
     <dimen name="browse_pic_hight">60dp</dimen>
     <dimen name="griditem_item">110dp</dimen>
-    <dimen name="griditem_item_textsize">10sp</dimen>
-    <dimen name="griditem_img">110dp</dimen>
+    <dimen name="griditem_item_textsize">11sp</dimen>
+    <dimen name="griditem_img">140dp</dimen>
+    <dimen name="griditem_img_">145dp</dimen>
     <dimen name="browse_txtcapacity_size">10sp</dimen>
     <dimen name="top_textsize">10sp</dimen>
     <dimen name="slidingmenu_offset">180dp</dimen>
