--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,9 +16,16 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-<style name="tallerBarStyle" parent="@android:style/Widget.SeekBar" >
+<style name="tallerBarStyle" parent="@android:style/Widget.ProgressBar" >
     <item name="android:indeterminateOnly">false</item>
-    <item name="android:progressDrawable">@android:drawable/progress_horizontal</item>
+    <item name="android:progressDrawable">@drawable/progress_main</item>
+    <item name="android:indeterminateDrawable">@android:drawable/progress_horizontal</item>
+    <item name="android:minHeight">8dp</item>
+    <item name="android:maxHeight">20dp</item>
+</style>
+<style name="downBarStyle" parent="@android:style/Widget.ProgressBar" >
+    <item name="android:indeterminateOnly">false</item>
+    <item name="android:progressDrawable">@drawable/progress_main</item>
     <item name="android:indeterminateDrawable">@android:drawable/progress_horizontal</item>
     <item name="android:minHeight">8dp</item>
     <item name="android:maxHeight">20dp</item>
